# arrayfire-scm

./: .gitignore  CMakeLists.txt  README.org  arrayfire.scm  arrayfire_scm.c  arrayfire_scm.cc  arrayfire_scm.h  construction.c  linear_algebra.c  linear_algebra.h  manifest.scm  mathematic.c  mathematic.h
arrayfire/: array.scm  library.scm  ling.scm  mathematic.scm  statistics.scm
csrc/: CMakeLists.txt  array.c  array.h  arrayfire_scm.c  arrayfire_scm.h  construction.c  construction.h  image.c  image.h  index.c  index.h  io.c  io.h  linear_algebra.c  linear_algebra.h  mathematic.c  mathematic.h  statistics.c  statistics.h
tests/: basic.scm  index.scm  linear_algebra.scm  mathematic.scm  statistics.scm
